Remove warnings from Jill
Change-Id: Ifee1cf45b7edbb12190d62cf62ce875929c27f3d